# ffxiv-item-name-database-scraper

./: .gitignore  Makefile  README.md  pyproject.toml  sam.yml
.circleci/: config.yml
src/: utils.py
src/handlers/: call_sfn.py  merge_eorzea_database.py  merge_item_data.py  merge_xivapi.py  scrape_eorzea_database.py  scrape_xivapi.py
src/logger/: decorator.py  json_log_formatter.py  my_logger.py
src/utils/: lambda_tool.py  s3_tool.py
