[tool.poetry]
name = "ffxiv-item-name-database-scraper"
version = "0.1.0"
description = ""
authors = ["sinofseven <em.s.00001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.1"

[tool.poetry.dev-dependencies]
awscli = "==1.18.60"
aws-sam-cli = "^1.0.0"
isort = "^5.2.2"
black = "^19.10b0"
ipython = "^7.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
